[gd_scene load_steps=27 format=3 uid="uid://c4hvqyphiayku"]

[ext_resource type="Script" uid="uid://cng38wbkc6o1l" path="res://scripts/scene/fly_cam.gd" id="1_g8tjy"]
[ext_resource type="Script" uid="uid://qsohuxakiknk" path="res://scripts/scene/scene_manager.gd" id="2_rcnun"]
[ext_resource type="PackedScene" uid="uid://dayj48d625g8j" path="res://scenes/test_mesh.tscn" id="3_a7gid"]
[ext_resource type="Shader" uid="uid://l5wqy7i72fxe" path="res://shaders/blend.gdshader" id="4_160ns"]
[ext_resource type="Texture2D" uid="uid://cvoom7qu4404c" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_diff_2k.jpg" id="6_o4opr"]
[ext_resource type="Texture2D" uid="uid://brs1husbmdekd" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_diff_2k.jpg" id="7_ibix0"]
[ext_resource type="Script" uid="uid://bg5e1ysrvtvw8" path="res://addons/context_probe/context_probe.gd" id="7_mb3xt"]
[ext_resource type="PackedScene" uid="uid://bx160s5humgli" path="res://scenes/debug_ui.tscn" id="7_tq85m"]
[ext_resource type="Texture2D" uid="uid://c0wg2kmpentsv" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_nor_gl_2k.png" id="8_g30sk"]
[ext_resource type="Script" uid="uid://cht8i58wawxmi" path="res://addons/context_probe/context_params.gd" id="8_o4opr"]
[ext_resource type="Texture2D" uid="uid://cse8uuw55uf3n" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_nor_gl_2k.png" id="8_p5hah"]
[ext_resource type="Texture2D" uid="uid://t0xk1rw1uk3x" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_rough_2k.jpg" id="9_aeb8e"]
[ext_resource type="Texture2D" uid="uid://bb75x6l3ec5wc" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_rough_2k.png" id="9_pokwt"]
[ext_resource type="PackedScene" uid="uid://douemxggwchfm" path="res://scenes/tile_test.tscn" id="10_3t87x"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_160ns"]
sky_top_color = Color(0.139497, 0.140391, 0.354607, 1)
sky_horizon_color = Color(0.321721, 0.371877, 0.644931, 1)
sky_curve = 0.135188
sky_cover_modulate = Color(0.133196, 0.133196, 0.133196, 1)
ground_bottom_color = Color(0.149604, 0.162288, 0.28224, 1)
ground_horizon_color = Color(0.321569, 0.372549, 0.643137, 1)
sun_angle_max = 37.65
sun_curve = 0.166435

[sub_resource type="Sky" id="Sky_160ns"]
sky_material = SubResource("ProceduralSkyMaterial_160ns")

[sub_resource type="Environment" id="Environment_5140r"]
background_mode = 2
background_color = Color(0.00619635, 0.013396, 0.0194763, 1)
sky = SubResource("Sky_160ns")
ambient_light_source = 3
ambient_light_color = Color(0.482749, 0.47207, 0.541328, 1)
ambient_light_sky_contribution = 0.55
ambient_light_energy = 3.82

[sub_resource type="SphereMesh" id="SphereMesh_iqdmv"]

[sub_resource type="Texture2DArrayRD" id="Texture2DArrayRD_p5hah"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3t87x"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_160ns")
shader_parameter/age = 17.735
shader_parameter/masks = SubResource("Texture2DArrayRD_p5hah")
shader_parameter/weights = [1.0, 0.0]
shader_parameter/base_metallic = 0.7
shader_parameter/albedo_base = ExtResource("6_o4opr")
shader_parameter/normal_base = ExtResource("8_p5hah")
shader_parameter/roughness_base = ExtResource("9_pokwt")
shader_parameter/paint_metallic = 0.4
shader_parameter/residue_cutoff = 0.765
shader_parameter/residue_intensity = 3.0
shader_parameter/residue_falloff = 0.025
shader_parameter/albedo_paint = ExtResource("7_ibix0")
shader_parameter/normal_paint = ExtResource("8_g30sk")
shader_parameter/roughness_paint = ExtResource("9_aeb8e")

[sub_resource type="PlaneMesh" id="PlaneMesh_5140r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1oqqo"]
albedo_color = Color(0.606626, 0.606626, 0.606626, 1)

[sub_resource type="Resource" id="Resource_o4opr"]
script = ExtResource("8_o4opr")
temperature = 8.0

[sub_resource type="SphereShape3D" id="SphereShape3D_o4opr"]
radius = 5.0

[sub_resource type="Resource" id="Resource_ibix0"]
script = ExtResource("8_o4opr")
temperature = 24.0

[sub_resource type="BoxShape3D" id="BoxShape3D_3t87x"]
size = Vector3(2.508667, 1.0693359, 5.8935547)

[node name="Shader Testing" type="Node3D"]
script = ExtResource("2_rcnun")

[node name="Camera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.66318196, 0.7484577, 0, -0.7484577, 0.66318196, 0, 0.708569, 1.6561717)
script = ExtResource("1_g8tjy")

[node name="Camera3D" type="Camera3D" parent="Camera"]
visible = false

[node name="Debug UI" parent="." instance=ExtResource("7_tq85m")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5140r")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.76021606, 0.3625422, 0.53910524, -0.6095463, 0.11092737, 0.784951, 0.22477633, -0.92534214, 0.305315, 2.07682, 5.80568, 1.86998)
shadow_enabled = true
shadow_opacity = 0.5

[node name="TestMesh" parent="." instance=ExtResource("3_a7gid")]
transform = Transform3D(1.005247, 0, 0, 0, 1.0052474, 0, 0, 0, 1.0052488, -0.0013777614, -5.9604645e-08, 7.224083e-05)
mesh = SubResource("SphereMesh_iqdmv")
surface_material_override/0 = SubResource("ShaderMaterial_3t87x")
age = 17.735
cell_weight_1 = 0.59
cell_weight_2 = 0.91
time_scale = 0.05

[node name="Plane" type="MeshInstance3D" parent="."]
transform = Transform3D(4.17641, 0, 0, 0, 0.996555, 0, 0, 0, 6.55465, 0.18543185, -0.4422262, -0.20468685)
mesh = SubResource("PlaneMesh_5140r")
surface_material_override/0 = SubResource("StandardMaterial3D_1oqqo")

[node name="ContextProbe" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.805, 0.015, -10.358)
visible = false
collision_mask = 0
script = ExtResource("7_mb3xt")
params = SubResource("Resource_o4opr")
metadata/_custom_type_script = "uid://bg5e1ysrvtvw8"

[node name="ProbeShape" type="CollisionShape3D" parent="ContextProbe"]
transform = Transform3D(1.0044327, 0, 0, 0, 1.0044327, 0, 0, 0, 1.0044327, 0, 0, 7.225)
shape = SubResource("SphereShape3D_o4opr")

[node name="ContextProbe2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.475, 0.135, 1.914)
visible = false
script = ExtResource("7_mb3xt")
params = SubResource("Resource_ibix0")
metadata/_custom_type_script = "uid://bg5e1ysrvtvw8"

[node name="ProbeShape" type="CollisionShape3D" parent="ContextProbe2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7543335, -0.03466797, -0.63427734)
shape = SubResource("BoxShape3D_3t87x")

[node name="tile_test" parent="." instance=ExtResource("10_3t87x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14744902, 0.0010024905, -2.148413)

[connection signal="reset_ages" from="Debug UI" to="." method="reset_ages"]
[connection signal="show_probes" from="Debug UI" to="." method="show_probes"]
[connection signal="show_tex_array" from="Debug UI" to="." method="show_tex_array"]
[connection signal="switch_scene" from="Debug UI" to="." method="switch_scene"]
[connection signal="test_multiple" from="Debug UI" to="." method="test_multiple"]
